mutants.out/log/src__http__error.rs_line_49_col_9.log

*** src/http/error.rs:49:9: replace <impl From for ParseRequestError>::from -> Self with Default::default()

*** mutation diff:
--- src/http/error.rs
+++ replace <impl From for ParseRequestError>::from -> Self with Default::default()
@@ -41,19 +41,17 @@
         Self {
             kind: ParseRequestErrorKind::InvalidMethod,
         }
     }
 }
 
 impl From<std::io::Error> for ParseRequestError {
     fn from(_: std::io::Error) -> Self {
-        Self {
-            kind: ParseRequestErrorKind::NetworkError,
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl Display for ParseRequestError {
     fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
         write!(f, "Request parsing error: {}", self.message())
     }
 }


*** /Users/aw/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --manifest-path /var/folders/dk/rmy45p9s5bn3y62kyrkfh6440000gn/T/cargo-mutants-codecrafters-http-server-rust-eXV76S.tmp/Cargo.toml --all-features
   Compiling http-server-starter-rust v0.1.0 (/var/folders/dk/rmy45p9s5bn3y62kyrkfh6440000gn/T/cargo-mutants-codecrafters-http-server-rust-eXV76S.tmp)
error[E0277]: the trait bound `ParseRequestError: std::default::Default` is not satisfied
  --> src/http/error.rs:49:9
   |
49 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `ParseRequestError`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `http-server-starter-rust` (bin "http-server-starter-rust" test) due to 1 previous error

*** result: Failure(101)
